--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Ceyizcikizi</title>
 </head>
 <body>
-	hi there
+	Merhaba Ugur 
 </body>
 </html>
