--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" >
+
 <head>
-	<meta charset="UTF-8">
-	<title>Ceyizcikizi</title>
+  <meta charset="UTF-8">
+  <title>B. Social</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
 </head>
+
 <body>
-	Merhaba Ugur 
+
+  
+<h1>@ceyizcikizi</h1>
+<main><a href="https://instagram.com/ceyizcikizi" target="_blank">
+    
+    <div class="icon">
+      <svg viewBox="0 0 400 400">
+        <g id="instagram">
+          <path class="shadow" d="M320.8,200c0,66.3-54.5,120.8-120.8,120.8S79.2,266.3,79.2,200c0-8.3,1.2-16.3,2.4-23.3H0V337c0,34.9,27.8,62.7,62.7,62.7H337c34.9,0,62.7-27.8,62.7-62.7V176.7h-81.6C319.6,183.7,320.8,192,320.8,200z M337,0.2H63C28.1,0.2,0.2,28.1,0.2,63v67.5h101.2c21.9-31.4,58-51.2,98.8-51.2s76.7,19.6,98.8,51.2H400V63C399.8,28.1,371.7,0.2,337,0.2zM368.4,76.9c0,5.9-4.7,11.6-11.6,11.6h-33.7c-5.9,0-11.6-4.7-11.6-11.6V43.2c0-5.9,4.7-11.6,11.6-11.6h33.7c5.9,0,11.6,4.7,11.6,11.6V76.9z M274.3,200c0-40.6-33.7-74.3-74.3-74.3s-74.3,33.7-74.3,74.3s33.5,74.3,74.3,74.3S274.3,240.6,274.3,200z"></path>
+          <path d="M320.8,200c0,66.3-54.5,120.8-120.8,120.8S79.2,266.3,79.2,200c0-8.3,1.2-16.3,2.4-23.3H0V337c0,34.9,27.8,62.7,62.7,62.7H337c34.9,0,62.7-27.8,62.7-62.7V176.7h-81.6C319.6,183.7,320.8,192,320.8,200z M337,0.2H63C28.1,0.2,0.2,28.1,0.2,63v67.5h101.2c21.9-31.4,58-51.2,98.8-51.2s76.7,19.6,98.8,51.2H400V63C399.8,28.1,371.7,0.2,337,0.2zM368.4,76.9c0,5.9-4.7,11.6-11.6,11.6h-33.7c-5.9,0-11.6-4.7-11.6-11.6V43.2c0-5.9,4.7-11.6,11.6-11.6h33.7c5.9,0,11.6,4.7,11.6,11.6V76.9z M274.3,200c0-40.6-33.7-74.3-74.3-74.3s-74.3,33.7-74.3,74.3s33.5,74.3,74.3,74.3S274.3,240.6,274.3,200z"></path>
+        </g>
+      </svg>
+    </div></a><a href="https://facebook.com/ceyizcikizi" target="_blank">
+    
+    <div class="icon">
+      <svg viewBox="0 0 400 400">
+        <g id="facebook">
+          <path class="shadow" d="M278.4,400V217.5h61.2l9.2-71.1h-70.4V101c0-20.6,5.7-34.6,35.2-34.6l37.7,0V2.8C344.8,1.9,322.5,0,296.5,0C242.2,0,205,33.1,205,94v52.4h-61.4v71.1H205V400H278.4z"></path>
+          <path d="M278.4,400V217.5h61.2l9.2-71.1h-70.4V101c0-20.6,5.7-34.6,35.2-34.6l37.7,0V2.8C344.8,1.9,322.5,0,296.5,0C242.2,0,205,33.1,205,94v52.4h-61.4v71.1H205V400H278.4z"></path>
+        </g>
+      </svg>
+    </div></a>
+</main>
+  
+  
+
 </body>
+
 </html>
